Developement
	konqueror patch from Christian.Morales.Vega
	plugin-dir patch from Christian.Morales.Vega
0.9.8
	When cancelling a stream (USER_BREAK) and the cancelled one is streaming
		don't automatically load the next item on the playlist
	When stream->lastmodified == 0 mark stream as streaming
		fixes http://www.radioswissclassic.ch/en
	Various fixes from the mailing list
	Version bump
	Add in new type of qt parser, make videos at PBS.org work
	Move on to the next item in the playlist, when the an open item gives an error
	Fix the autostart property when then plugin window is hidden
	Only emulate QuickTime with the qt plugin
	Change the user agent to "QuickTime/7.6.2" while the plugin is loaded, makes Apple.com/trailers work again
0.9.7
	Clean up code with 'make indent'
	Added a RAM parser
	Added Czech translation by Petr Pisar
	Add Dutch translation
	Add in check for GIO, enables functionality in libgmlib
	Remove need for LIBTOOL, program should compile cleaner now
	Patch to correct --as-needed linker flag
0.9.6
	Fix constant issue with old xulrunner kits
	Update GUI while cache is loading
	Make Copy Location get the entire url
	Add support for Apple's 'postdomevents' option
	Apply browser id patch to work around site specifically looking for mplayerplug-in
	Infrastructure to support windowless mode, but it doesn't work
	Convert internal preference store to gm_pref_store from libgmlib
	Reuse gm_tempname from libgmlib saving duplicate code
	Merge in libgmlib, it is pulled from the gnome-mplayer svn
0.9.5
	Fix problem with memmem on OpenBSD, memmem_compat is now used by all
	Added Japanese Translation by Munehiro Yamamoto
	Fixed issue with pt_BR.po file
0.9.4
	Add support for OpenBSD which does not have memmem
	Add Italian translation by Francesco Groccia
	Make gecko-mediaplayer work in Konqueror 4
	Keep updating progress text until file is completely downloaded
	Try to get bitrate from media at 1-5% markers
	Remove gconftool --shutdown from makefile